[gd_scene load_steps=3 format=3 uid="uid://uh32wnk5s7en"]

[ext_resource type="Theme" uid="uid://cpdo5t1tb74nu" path="res://assets/Theme.tres" id="1_fdw1d"]
[ext_resource type="Script" uid="uid://v2rmcb4mm27c" path="res://scenes/credits/credits_entry.gd" id="1_kdu0a"]

[node name="MarginContainer" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_fdw1d")
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
script = ExtResource("1_kdu0a")

[node name="CreditsEntry" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="AssetUsage" type="Label" parent="CreditsEntry"]
layout_mode = 2
text = "Thing"

[node name="AssetName" type="RichTextLabel" parent="CreditsEntry"]
clip_contents = false
layout_mode = 2
bbcode_enabled = true
text = "AssetName"
fit_content = true
scroll_active = false

[node name="AuthorName" type="RichTextLabel" parent="CreditsEntry"]
clip_contents = false
layout_mode = 2
bbcode_enabled = true
text = "AuthorName"
fit_content = true
scroll_active = false

[connection signal="meta_clicked" from="CreditsEntry/AssetName" to="." method="_on_asset_name_meta_clicked"]
